--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5576,92 +5576,24 @@ section.lazy-placeholder:after {
 .cid-rphZCOGOcY .mbr-section-title {
   color: #0f7699;
 }
-.cid-rphZDPqelG {
+.cid-rEoEQL7cvc {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/-691x398.jpg");
-}
-.cid-rphZDPqelG .mbr-section-subtitle {
-  color: #cc2952;
-  text-align: center;
-  font-weight: 300;
-}
-.cid-rphZDPqelG .step {
-  width: 64px;
-  height: 64px;
-  font-size: 32px;
-  border-radius: 50%;
-  border: 2px solid #efefef;
-}
-@media (max-width: 767px) {
-  .cid-rphZDPqelG .step {
-    width: 48px;
-    height: 48px;
-    font-size: 24px;
-  }
-}
-.cid-rphZDPqelG .separline {
-  position: relative;
-}
-.cid-rphZDPqelG .separline:after {
-  top: 68px;
-  left: 30px;
-  position: absolute;
-  content: "";
-  width: 2px;
-  height: calc(100% - (32px + 4px) * 2);
-  background-color: #efefef;
-}
-@media (max-width: 767px) {
-  .cid-rphZDPqelG .separline:after {
-    top: 52px;
-    left: 22px;
-    height: calc(100% - 56px);
-  }
-}
-.cid-rphZDPqelG .media-block {
-  flex-shrink: 0;
-  -webkit-flex-shrink: 0;
+  background: linear-gradient(45deg, #0f7699, #ff7f9f);
 }
 @media (min-width: 992px) {
-  .cid-rphZDPqelG .media-block {
-    padding-right: 2rem;
+  .cid-rEoEQL7cvc .mbr-figure {
+    padding-left: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-rphZDPqelG .media-block {
-    flex-basis: 100%;
-    -webkit-flex-basis: 100%;
-    padding-bottom: 2rem;
+  .cid-rEoEQL7cvc .mbr-figure {
+    padding-top: 3rem;
   }
 }
-.cid-rphZDPqelG .mbr-step-title {
+.cid-rEoEQL7cvc .mbr-text,
+.cid-rEoEQL7cvc .mbr-section-btn {
   text-align: center;
-  color: #cc2952;
-}
-.cid-rphZDPqelG .mbr-step-text {
-  text-align: center;
-  color: #0f7699;
-}
-.cid-rphZDPqelG .mbr-step-text B {
-  color: #0f7699;
-}
-.cid-rphZDPqelG .mbr-section-subtitle B {
-  color: #cc2952;
-}
-.cid-rpo2b3bCpo {
-  background: #149dcc;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: linear-gradient(0deg, #149dcc, #ffffff);
-}
-.cid-rpo2b3bCpo .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-rpo2b3bCpo .video-block {
-    width: 100% !important;
-  }
 }
 .cid-rpcjNVfJQY {
   padding-top: 60px;
