--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5594,6 +5594,10 @@ section.lazy-placeholder:after {
 .cid-rEoEQL7cvc .mbr-text,
 .cid-rEoEQL7cvc .mbr-section-btn {
   text-align: center;
+  color: #073b4c;
+}
+.cid-rEoEQL7cvc .mbr-section-title {
+  color: #073b4c;
 }
 .cid-rpcjNVfJQY {
   padding-top: 60px;
