--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5579,7 +5579,7 @@ section.lazy-placeholder:after {
 .cid-rEoEQL7cvc {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #0f7699, #ff7f9f);
+  background: linear-gradient(45deg, #55b4d4, #f9f295);
 }
 @media (min-width: 992px) {
   .cid-rEoEQL7cvc .mbr-figure {
