--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5579,7 +5579,7 @@ section.lazy-placeholder:after {
 .cid-rEoEQL7cvc {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #55b4d4, #f9f295);
+  background: linear-gradient(45deg, #5b686b, #f9f295);
 }
 @media (min-width: 992px) {
   .cid-rEoEQL7cvc .mbr-figure {
@@ -5594,10 +5594,10 @@ section.lazy-placeholder:after {
 .cid-rEoEQL7cvc .mbr-text,
 .cid-rEoEQL7cvc .mbr-section-btn {
   text-align: center;
-  color: #073b4c;
+  color: #2e2e2e;
 }
 .cid-rEoEQL7cvc .mbr-section-title {
-  color: #073b4c;
+  color: #2e2e2e;
 }
 .cid-rpcjNVfJQY {
   padding-top: 60px;
